# NDKDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/bytebitx/ndkdemo/: ExampleInstrumentedTest.kt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/add/: CMakeLists.txt
app/src/main/cpp/add/include/: Add.h
app/src/main/cpp/add/src/: sub.cpp
app/src/main/cpp/include/: VideoDecoder.cpp  VideoDecoder.h
app/src/main/cpp/jni/: jvm.cpp  jvm.h  main.cpp
app/src/main/cpp/jvm/: CMakeLists.txt
app/src/main/cpp/jvm/include/: CPPLog.h
app/src/main/cpp/sub/include/: sub.h
app/src/main/cpp/sub/src/: sub.cpp
app/src/main/java/com/bytebitx/ndkdemo/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/bytebitx/ndkdemo/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
